<resources>
    <string name="app_name">My App Portfolio</string>

    <string name="app_title_name">My Nanodegree Apps!</string>
    <string name="app_popular_movies">POPULAR MOVIES</string>
    <string name="app_stock_hawk">STOCK HAWK</string>
    <string name="app_build_it_bigger">BUILD IT BIGGER</string>
    <string name="app_make_your_app_material">MAKE YOUR APP MATERIAL</string>
    <string name="app_go_ubiquitous">GO UBIQUITOUS</string>
    <string name="app_capstone">CAPSTONE</string>

    <string name="message_popular_movies">This button will launch popular movies app!</string>
    <string name="message_stock_hawk">This button will launch stock hawk app!</string>
    <string name="message_build_it_bigger">This button will launch build it bigger app!</string>
    <string name="message_make_your_app_material">This button will launch make your app material app!</string>
    <string name="message_go_ubiquitous">This button will launch go ubiquitous app!</string>
    <string name="message_capstone">This button will launch Capstone app!</string>

</resources>
